# mailer-app

./: package.json
src/: App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
